--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,8 @@ sw.*
 /backend/.venv
 /backend/venv
 .venv
+backend/app/db/__pycache__/models.cpython-310.pyc
+backend/app/__pycache__/__init__.cpython-310.pyc
+backend/app/__pycache__/config.cpython-310.pyc
+backend/app/__pycache__/routes.cpython-310.pyc
+backend/app/__pycache__/schemas.cpython-310.pyc
