--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@babel/eslint-parser": "^7.18.2",
     "@nuxtjs/auth-next": "5.0.0-1648802546.c9880dc",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/i18n": "^7.2.2",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
+    "nuxt-highcharts": "^2.0.4",
     "vue": "^2.6.14",
     "vue-json-to-csv": "^1.1.8",
     "vue-server-renderer": "^2.6.14",
