--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/eslint-parser": "^7.18.2",
     "@nuxtjs/auth-next": "5.0.0-1648802546.c9880dc",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/i18n": "^7.2.2",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
