--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
+    "dev": "NODE_ENV=dev nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
@@ -24,6 +24,7 @@
     "vue": "^2.6.14",
     "vue-json-to-csv": "^1.1.8",
     "vue-server-renderer": "^2.6.14",
+    "vue-sweetalert2": "^5.0.5",
     "vue-template-compiler": "^2.6.14",
     "vuetify": "^2.6.1"
   },
