--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
     "nuxt-highcharts": "^2.0.4",
+    "sweetalert2": "^11.4.19",
     "vue": "^2.6.14",
     "vue-json-to-csv": "^1.1.8",
     "vue-server-renderer": "^2.6.14",
